--- a/taskmanager/main/templates/main/base.html
+++ b/taskmanager/main/templates/main/base.html
@@ -14,6 +14,7 @@
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{% url 'home' %}">Главная</a>
         <a class="p-2 text-dark" href="{% url 'tables' %}">Таблицы</a>
+          <a class="p-2 text-dark" href="{% url 'sql' %}">sql</a>
       </nav>
     </div>
 
