--- a/taskmanager/main/templates/main/index.html
+++ b/taskmanager/main/templates/main/index.html
@@ -6,4 +6,14 @@ Main page
 
 {% block content %}
     <h1>Главная страница</h1>
+    <p>
+        Агентство недвижимости — специализированная коммерческая организация, осуществляющая как правило посреднические услуги между продавцом и конечным покупателем на рынке недвижимости.
+    </p>
+    <p>Виды предоставляемых услуг</p>
+    <ul>
+        <li>Покупка-продажа, аренда недвижимости.</li>
+        <li>Поиск продавцов и покупателей.</li>
+        <li>Юридическое сопровождение сделки.</li>
+        <li>Консультации по вопросам сделок с недвижимостью.</li>
+    </ul>
 {% endblock %}
