--- a/taskmanager/main/templates/main/tables.html
+++ b/taskmanager/main/templates/main/tables.html
@@ -6,7 +6,7 @@ Main page
 
 {% block content %}
     <h1>Tables</h1>
-<table border="1">
+    <table class="table table-bordered table-dark">
         <tr>
             <td>Код</td>
             <td>ФИО</td>
@@ -15,15 +15,81 @@ Main page
             <td>Адресс</td>
             <td>Телефон</td>
         </tr>
-        {% for datadisplay in employees %}
+        {% for el in employees %}
         <tr>
-            <td>{{ datadisplay.code }}</td>
-            <td>{{ datadisplay.FIO }}</td>
-            <td>{{ datadisplay.post }}</td>
-            <td>{{ datadisplay.dateOfEmployment }}</td>
-            <td>{{ datadisplay.address }}</td>
-            <td>{{ datadisplay.tel }}</td>
+            <td>{{ el.code }}</td>
+            <td>{{ el.FIO }}</td>
+            <td>{{ el.post }}</td>
+            <td>{{ el.dateOfEmployment }}</td>
+            <td>{{ el.address }}</td>
+            <td>{{ el.tel }}</td>
         </tr>
         {% endfor %}
     </table>
+    <table class="table table-bordered table-dark">
+        <tr>
+            <td>Код</td>
+            <td>ФИО</td>
+            <td>Адресс</td>
+            <td>Телефон</td>
+            <td>Код поспорта</td>
+            <td>Индентификационный номер</td>
+        </tr>
+        {% for el in clientBuy %}
+        <tr>
+            <td>{{ el.code }}</td>
+            <td>{{ el.FIO }}</td>
+            <td>{{ el.address }}</td>
+            <td>{{ el.tel }}</td>
+            <td>{{ el.passportCode }}</td>
+            <td>{{ el.passportNumber }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    <table class="table table-bordered table-dark">
+        <tr>
+            <td>Код</td>
+            <td>ФИО</td>
+            <td>Адресс</td>
+            <td>Телефон</td>
+            <td>Код поспорта</td>
+            <td>Индентификационный номер</td>
+        </tr>
+        {% for el in сlientSell %}
+        <tr>
+            <td>{{ el.code }}</td>
+            <td>{{ el.FIO }}</td>
+            <td>{{ el.address }}</td>
+            <td>{{ el.tel }}</td>
+            <td>{{ el.passportCode }}</td>
+            <td>{{ el.passportNumber }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    <table class="table table-bordered table-dark">
+        <tr>
+            <td>Код заявки</td>
+            <td>Дата составления заказа</td>
+            <td>Наименование объекта</td>
+            <td>Площадь м2</td>
+            <td>Кол-во комнат</td>
+            <td>Улица</td>
+            <td>Цена</td>
+            <td>Продавец</td>
+        </tr>
+        {% for el in property %}
+        <tr>
+            <td>{{ el.applicationCode }}</td>
+            <td>{{ el.dateOfOrder }}</td>
+            <td>{{ el.name }}</td>
+            <td>{{ el.area }}</td>
+            <td>{{ el.rooms }}</td>
+            <td>{{ el.street }}</td>
+            <td>{{ el.price }}</td>
+            <td>{{ el.seller }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+
+
 {% endblock %}
