--- a/taskmanager/main/templates/main/index.html
+++ b/taskmanager/main/templates/main/index.html
@@ -16,19 +16,24 @@ Main page
         <li>Юридическое сопровождение сделки.</li>
         <li>Консультации по вопросам сделок с недвижимостью.</li>
     </ul>
-    <h2 class="mt-5">Наши сотрудники</h2>
-    <table class="table table-bordered table-dark ">
-        <tr class="bg-warning text-dark">
-            <th>ФИО</th>
-            <th>Должность</th>
-            <th>Телефон</th>
-        </tr>
-        {% for el in employees %}
-        <tr>
-            <td>{{ el.FIO }}</td>
-            <td>{{ el.post }}</td>
-            <td>{{ el.tel }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    {% verbatim %}
+        <div class="container" id="emp">
+            <h2 class="mt-2">Наши сотрудники</h2>
+            <table class="table table-bordered table-dark mt-3">
+                <tr class="bg-warning text-dark">
+                    <th>ФИО</th>
+                    <th>Должность</th>
+                    <th>Телефон</th>
+                </tr>
+                <tr v-for="el in employees">
+                    <td>{{ el.FIO }}</td>
+                    <td>{{ el.post }}</td>
+                    <td>{{ el.tel }}</td>
+                </tr>
+            </table>
+        </div>
+    {% endverbatim %}
+{% endblock %}
+{% block script %}
+<script src="/static/emp.js"></script>
 {% endblock %}
