--- a/taskmanager/main/templates/main/requests.html
+++ b/taskmanager/main/templates/main/requests.html
@@ -1,61 +1,45 @@
 {% extends 'main/base.html' %}
 
 {% block title %}
-Main page
+Requests
 {% endblock %}
 
 {% block content %}
-    <h1>Добавить покупателя\продавца\недвижимость</h1>
-    <div class="container" id="test">
-        <b-tabs content-class="mt-3">
-            <b-tab title="Добавить покупателя" active>
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form1.FIO }}<br>
-                    {{ form1.address}}<br>
-                    {{ form1.tel}}<br>
-                    {{ form1.passportCode}}
-                    <span class="help-block ml-3 text-muted">2 буквы и 7 цифр</span>
-                    {{ form1.passportNumber}}
-                    <span class="help-block ml-3 text-muted">14 символов</span>
-                    <br>
-                    <button type="submit" class="btn btn-success mt-5">Добавить</button>
-                <span>{{ error }}</span>
-                </form>
-            </b-tab>
-            <b-tab title="Добавить продавца">
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form2.FIO }}<br>
-                    {{ form2.address}}<br>
-                    {{ form2.tel}}<br>
-                    {{ form2.passportCode}}
-                    <span class="help-block ml-3 text-muted">   2 буквы и 7 цифр</span>
-                    {{ form2.passportNumber}}
-                    <span class="help-block ml-3 text-muted">   14 символов</span>
-                    <br>
-                    <button type="submit" class="btn btn-success mt-5">Добавить</button>
-                <span>{{ error }}</span>
-                </form>
-            </b-tab>
-            <b-tab title="Добавить недвижимость">
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form3.dateOfOrder }}<br>
-                    {{ form3.name}}<br>
-                    {{ form3.area}}<br>
-                    {{ form3.rooms}}<br>
-                    {{ form3.address}}<br>
-                    {{ form3.price}}<br>
-                    {{ form3.seller}}<br>
-                    <button type="submit" class="btn btn-success mt-5">Добавить</button>
-                <span>{{ error }}</span>
-                </form>
-            </b-tab>
-        </b-tabs>
-    </div>
+    <h1>Поиск квартиру по адресу</h1>
+    <form action="" method="POST">
+    {% csrf_token %}
+    {{ form1.as_p }}
+    {{ form2.as_p }}
+    <input type="Submit" name="submit" value="Поиск"/>
+    </form>
+
+    {% if submitbutton == "Поиск" %}
+    <h2>Квартиры по адресу содержащему{{ address }}:</h2>
+        <table class="table table-bordered table-dark">
+        <tr>
+            <td>Дата составления заказа</td>
+            <td>Наименование объекта</td>
+            <td>Площадь м2</td>
+            <td>Кол-во комнат</td>
+            <td>Адрес</td>
+            <td>Цена</td>
+            <td>Состояние продажи</td>
+        </tr>
+        {% for el in property %}
+        <tr>
+            <td>{{ el.dateOfOrder }}</td>
+            <td>{{ el.name }}</td>
+            <td>{{ el.area }}</td>
+            <td>{{ el.rooms }}</td>
+            <td>{{ el.address }}</td>
+            <td>{{ el.price }}</td>
+            <td>{{ el.ifSelled }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% endif %}
 
 {% endblock %}
 {% block script %}
-    <script src="/static/test.js"></script>
+
 {% endblock %}
