--- a/taskmanager/main/templates/main/test.html
+++ b/taskmanager/main/templates/main/test.html
@@ -4,26 +4,45 @@
 test
 {% endblock %}
 
+
 {% block content %}
 
-    {% verbatim %}
-        <div class="container" id="emp">
-        <b-tabs content-class="mt-3">
-            <b-tab title="First" active><p>I'm the first tab</p></b-tab>
-            <b-tab title="Second"><p>I'm the second tab</p></b-tab>
-            <b-tab title="Disabled" disabled><p>I'm a disabled tab!</p></b-tab>
-        </b-tabs>
-            <div class="btn btn-success btn-lg " v-for="em in employees">
-                Fio: {{ em.FIO }}<br>
-                Post: {{ em.post }}
-            </div>
-        </div>
+    <form action="" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="Submit" name="submit" value="Submit"/>
+    </form>
 
-    {% endverbatim %}
+    {% if submitbutton == "Submit" %}
+    <h1>Your address is {{ address }}</h1>
+        <table class="table table-bordered table-dark">
+        <tr>
+            <td>Дата составления заказа</td>
+            <td>Наименование объекта</td>
+            <td>Площадь м2</td>
+            <td>Кол-во комнат</td>
+            <td>Адрес</td>
+            <td>Цена</td>
+            <td>Состояние продажи</td>
+        </tr>
+        {% for el in property %}
+        <tr>
+            <td>{{ el.dateOfOrder }}</td>
+            <td>{{ el.name }}</td>
+            <td>{{ el.area }}</td>
+            <td>{{ el.rooms }}</td>
+            <td>{{ el.address }}</td>
+            <td>{{ el.price }}</td>
+            <td>{{ el.ifSelled }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% endif %}
 
 
 
 {% endblock %}
+
 {% block script %}
-<script src="/static/test.js"></script>
+
 {% endblock %}
