--- a/taskmanager/main/templates/main/test2.html
+++ b/taskmanager/main/templates/main/test2.html
@@ -1,5 +1,15 @@
 {% extends 'main/base.html' %}
-
+<style>
+        html{
+            height: 100%;
+        }
+        body{
+            background-image: url("/static/img/mgt-cover.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+</style>
 {% block title %}
 test
 {% endblock %}
