--- a/taskmanager/main/templates/main/user_forms.html
+++ b/taskmanager/main/templates/main/user_forms.html
@@ -15,7 +15,7 @@ User forms
                     {{ form1.address}}<br>
                     {{ form1.tel}}<br>
                     {{ form1.passportCode}}
-                    <span class="help-block ml-3 text-muted">2 буквы и 7 цифр</span>
+                    <span class="help-block ml-3 text-muted">2 буквы и 7 цифр</span><br><br>
                     {{ form1.passportNumber}}
                     <span class="help-block ml-3 text-muted">14 символов</span>
                     <br>
@@ -30,9 +30,9 @@ User forms
                     {{ form2.address}}<br>
                     {{ form2.tel}}<br>
                     {{ form2.passportCode}}
-                    <span class="help-block ml-3 text-muted">   2 буквы и 7 цифр</span>
+                    <span class="help-block ml-3 text-muted">2 буквы и 7 цифр</span><br><br>
                     {{ form2.passportNumber}}
-                    <span class="help-block ml-3 text-muted">   14 символов</span>
+                    <span class="help-block ml-3 text-muted">14 символов</span>
                     <br>
                     <button type="submit" class="btn btn-success mt-5">Добавить</button>
                 <span>{{ error }}</span>
