--- a/taskmanager/main/templates/main/base.html
+++ b/taskmanager/main/templates/main/base.html
@@ -15,12 +15,31 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">Риэлторская компания ООО "Моя оборона"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-          <a class="p-2 text-dark" href="{% url 'home' %}">Главная</a>
-          <a class="p-2 text-dark" href="{% url 'property' %}">Недвижимость</a>
-          <a class="p-2 text-dark" href="{% url 'user_forms' %}">Для продавцов\покупателей</a>
-          <a class="p-2 text-dark" href="{% url 'requests' %}">Запросы</a>
-          <a class="p-2 text-dark" href="{% url 'stuff_auth' %}">Для персоонала</a>
-          <a class="p-2 text-dark" href="{% url 'test' %}">test</a>
+          <div class="container mt-4">
+              <ul class="nav nav-pills">
+                  <li class="nav-item">
+                      {% url 'home' as url_home %}
+                      <a class="nav-link {% if url_home == request.path %}active{% endif %}" href="{{url_home}}">Главная</a>
+                  </li>
+                  <li class="nav-item">
+                      {% url 'property' as url_property %}
+                      <a class="nav-link {% if url_property == request.path %}active{% endif %}" href="{{url_property}}">Недвижимость</a>
+                  </li>
+                  <li class="nav-item">
+                      {% url 'requests' as url_requests %}
+                      <a class="nav-link {% if url_requests == request.path %}active{% endif %}" href="{{url_requests}}">Поиск квартир</a>
+                  </li>
+                  <li class="nav-item">
+                      {% url 'user_forms' as url_user_forms %}
+                      <a class="nav-link {% if url_user_forms == request.path %}active{% endif %}" href="{{url_user_forms}}">Для продавцов\покупателей</a>
+                  </li>
+                  <li class="nav-item">
+                      {% url 'stuff_auth' as url_stuff_auth %}
+                      <a class="nav-link {% if url_stuff_auth == request.path %}active{% endif %}" href="{{url_stuff_auth}}">Для персоонала</a>
+                  </li>
+              </ul>
+              <a class="p-2 text-dark" href="{% url 'test' %}">test</a>
+          </div>
       </nav>
     </div>
 
