--- a/taskmanager/main/templates/stuff/base_stuff.html
+++ b/taskmanager/main/templates/stuff/base_stuff.html
@@ -13,33 +13,31 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">Риэлторская компания ООО "Моя оборона"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-          <div class="container mt-4">
+          <div class="container mt-2">
               <ul class="nav nav-pills">
                   <li class="nav-item">
                       {% url 'home' as url_home %}
-                      <a class="nav-link {% if url_home == request.path %}active{% endif %}" href="{{url_home}}">Главная</a>
+                      <a class="nav-link active mr-3" href={{ url_home }}>Вернуться на главную</a>
                   </li>
                   <li class="nav-item">
-                      {% url 'property' as url_property %}
-                      <a class="nav-link {% if url_property == request.path %}active{% endif %}" href="{{url_property}}">Недвижимость</a>
+                       {% url 'tables' as url_tables %}
+                      <a class="nav-link btn-info {% if url_tables == request.path %}active{% endif %} mr-3" href="{{url_tables}}">Таблицы</a>
                   </li>
                   <li class="nav-item">
-                      {% url 'requests' as url_requests %}
-                      <a class="nav-link {% if url_requests == request.path %}active{% endif %}" href="{{url_requests}}">Поиск квартир</a>
+                       {% url 'stuff_forms' as url_stuff_forms %}
+                      <a class="nav-link btn-info {% if url_stuff_forms == request.path %}active{% endif %} mr-3" href="{{url_stuff_forms}}">Сделки</a>
                   </li>
                   <li class="nav-item">
-                      {% url 'user_forms' as url_user_forms %}
-                      <a class="nav-link {% if url_user_forms == request.path %}active{% endif %}" href="{{url_user_forms}}">Для продавцов\покупателей</a>
+                      <a class="nav-link active mr-3" href='admin'>Админ панель</a>
                   </li>
                   <li class="nav-item">
-                      {% url 'stuff_auth' as url_stuff_auth %}
-                      <a class="nav-link {% if url_stuff_auth == request.path %}active{% endif %}" href="{{url_stuff_auth}}">Для персоонала</a>
+                      {% url 'logout_page' as url_logout_page %}
+                      <a class="nav-link btn-danger active ml-5" href={{ url_logout_page }}>Выйти</a>
                   </li>
               </ul>
           </div>
       </nav>
     </div>
-
     <div class="container">
         {% block content %}{% endblock %}
     </div>
