--- a/taskmanager/main/templates/main/user_forms.html
+++ b/taskmanager/main/templates/main/user_forms.html
@@ -47,7 +47,9 @@ User forms
                     {{ form3.rooms}}<br>
                     {{ form3.address}}<br>
                     {{ form3.price}}<br>
-                    {{ form3.seller}}<br>
+                    {{ form3.seller}}
+                    <span class="help-block ml-3 text-muted">Выберите продавца</span>
+                    <br>
                     <button type="submit" class="btn btn-success mt-5">Добавить</button>
                 <span>{{ error }}</span>
                 </form>
