--- a/taskmanager/main/templates/stuff/stuff_auth.html
+++ b/taskmanager/main/templates/stuff/stuff_auth.html
@@ -6,7 +6,7 @@ Stuff_Auth
 
 {% block content %}
     <div class="container d-flex justify-content-center mt-5">
-        <a class="btn btn-primary btn-lg mt-3 mb-3" href="login" role="button">Панель персоонала</a>
+        <a class="btn btn-primary btn-lg mt-3 mb-3" href="login" role="button">Панель персонала</a>
     </div>
     <div class="container d-flex justify-content-center">
         <a class="btn btn-primary btn-lg mt-3 mb-3" href="admin" role="button">Панель администратора</a>
