--- a/taskmanager/main/templates/main/base.html
+++ b/taskmanager/main/templates/main/base.html
@@ -8,10 +8,12 @@
     <title>{% block title %}{% endblock %}</title>
     {% block link %}{% endblock %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 class="my-0 mr-md-auto font-weight-normal mt-2">Риэлторская компания ООО "Моя оборона"</h5>
+      <h5 style="font-family: 'Roboto Slab', serif;" class="my-0 mr-md-auto font-weight-normal mt-2 mr-3">Риэлторская компания ООО "Моя оборона"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
           <div class="container mt-3">
               <ul class="nav nav-pills">
@@ -36,9 +38,9 @@
                          href="{{url_user_forms}}">Для продавцов\покупателей</a>
                   </li>
                   <li class="nav-item">
-                      {% url 'stuff_auth' as url_stuff_auth %}
-                      <a class="nav-link {% if url_stuff_auth == request.path %}active{% endif %}"
-                         href="{{url_stuff_auth}}">Для персонала</a>
+                      {% url 'tables' as url_tables %}
+                      <a class="btn btn-warning font-weight-bold ml-3 {% if url_tables == request.path %}active{% endif %}"
+                         href="{{url_tables}}">Для персонала</a>
                   </li>
               </ul>
           </div>
