--- a/taskmanager/main/templates/main/base.html
+++ b/taskmanager/main/templates/main/base.html
@@ -12,44 +12,54 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 style="font-family: 'Roboto Slab', serif;" class="my-0 mr-md-auto font-weight-normal mt-2 mr-3">Риэлторская компания ООО "Моя оборона"</h5>
-      <nav class="my-2 my-md-0 mr-md-3">
-          <div class="container mt-3">
-              <ul class="nav nav-pills">
-                  <li class="nav-item">
-                      {% url 'home' as url_home %}
-                      <a class="nav-link {% if url_home == request.path %}active{% endif %}"
-                         href="{{url_home}}">Главная</a>
-                  </li>
-                  <li class="nav-item">
-                      {% url 'property' as url_property %}
-                      <a class="nav-link {% if url_property == request.path %}active{% endif %}"
-                         href="{{url_property}}">Недвижимость</a>
-                  </li>
-                  <li class="nav-item">
-                      {% url 'requests' as url_requests %}
-                      <a class="nav-link {% if url_requests == request.path %}active{% endif %}"
-                         href="{{url_requests}}">Поиск квартир</a>
-                  </li>
-                  <li class="nav-item">
-                      {% url 'user_forms' as url_user_forms %}
-                      <a class="nav-link {% if url_user_forms == request.path %}active{% endif %}"
-                         href="{{url_user_forms}}">Для продавцов\покупателей</a>
-                  </li>
-                  <li class="nav-item">
-                      {% url 'tables' as url_tables %}
-                      <a class="btn btn-warning font-weight-bold ml-3 {% if url_tables == request.path %}active{% endif %}"
-                         href="{{url_tables}}">Для персонала</a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-    </div>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h5 style="font-family: 'Roboto Slab', serif;" class="my-0 mr-md-auto font-weight-normal mt-2 mr-3">Риэлторская
+        компания ООО "Моя оборона"</h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+        <div class="container mt-3">
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    {% url 'home' as url_home %}
+                    <a class="nav-link {% if url_home == request.path %}active{% endif %}"
+                       href="{{ url_home }}">Главная</a>
+                </li>
+                <li class="nav-item">
+                    {% url 'property' as url_property %}
+                    <a class="nav-link {% if url_property == request.path %}active{% endif %}"
+                       href="{{ url_property }}">Недвижимость</a>
+                </li>
+                <li class="nav-item">
+                    {% url 'requests' as url_requests %}
+                    <a class="nav-link {% if url_requests == request.path %}active{% endif %}"
+                       href="{{ url_requests }}">Поиск квартир</a>
+                </li>
+                <li class="nav-item">
+                    {% url 'user_forms' as url_user_forms %}
+                    <a class="nav-link {% if url_user_forms == request.path %}active{% endif %}"
+                       href="{{ url_user_forms }}">Для продавцов\покупателей</a>
+                </li>
+                <li class="nav-item">
+                    {% url 'tables' as url_tables %}
+                    <a class="btn btn-warning font-weight-bold ml-3 {% if url_tables == request.path %}active{% endif %}"
+                       href="{{ url_tables }}">Для персонала</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-    <div class="container">
-        {% block content %}{% endblock %}
+{% if messages %}
+    <div class="alert alert-success text-center">
+        {% for m in messages %}
+            {{ m }}
+        {% endfor %}
     </div>
+{% endif %}
+
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
+
 {% block script %}{% endblock %}
 </body>
 </html>
